[package]
name = "cyclonetix"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
redis = { version = "0.28", features = ["tokio-comp", "aio"] }
axum = "0.8"
tower-http = { version = "0.6.2", features = ["fs"] }
rust-embed = "8.5.0"
mime_guess = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
async-trait = "0.1.86"
petgraph = "0.7.1"
futures-util = "0.3"
twox-hash = "2.1.0"
futures = "0.3.31"
uuid = { version = "1.13.1", features = ["v4"] }

[lib]
name = "cyclonetix"
path = "src/lib.rs"

[dev-dependencies]

[profile.release]
incremental = false
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"