[package]
name = "cyclonetix"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
redis = { version = "0.28", features = ["tokio-comp", "aio"] }
deadpool-redis = "0.19.0"
actix-web = "4"
tera = "1"
rust-embed = "8.5.0"
mime_guess = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
async-trait = "0.1.86"
petgraph = { version = "0.7.1", features = ["serde-1"] }
futures-util = "0.3"
twox-hash = "2.1.0"
futures = "0.3.31"
uuid = { version = "1.13.1", features = ["v4"] }
async-recursion = "1.1.1"
once_cell = "1.20.3"
dashmap = "7.0.0-rc1"

[lib]
name = "cyclonetix"
path = "src/lib.rs"

[dev-dependencies]

[profile.release]
incremental = false
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"